// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MutedBox render() handles default 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;

exports[`MutedBox render() handles ignoreCount 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       more user(s)
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;

exports[`MutedBox render() handles ignoreCount with ignoreWindow 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored until it occurs 
      <strong
        key="1"
      >
        100
      </strong>
       time(s) in 
      <strong
        key="3"
      >
        <Duration
          seconds={60}
        />
      </strong>
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;

exports[`MutedBox render() handles ignoreUntil 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored until 
      <strong
        key="1"
      >
        <DateTime
          date="2017-06-21T19:45:10Z"
          seconds={true}
        />
      </strong>
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;

exports[`MutedBox render() handles ignoreUserCount 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       more user(s)
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;

exports[`MutedBox render() handles ignoreUserCount with ignoreUserWindow 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-soundoff"
  />
  <p>
    <span>
      This issue has been ignored until it affects 
      <strong
        key="1"
      >
        100
      </strong>
       user(s) in 
      <strong
        key="3"
      >
        <Duration
          seconds={60}
        />
      </strong>
       — 
    </span>
    You will not be notified of any changes and it will not show up by default in feeds.
  </p>
</div>
`;
